gobmkida/c3/compute_surroundings
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_surroundings/src/engine/surround.c:1186:7: error: use of undeclared identifier 'byte_9C688C'
if ( !byte_9C688C[v121] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_surroundings/src/engine/surround.c:1191:26: error: use of undeclared identifier 'byte_9C688D'
v127 = ( unsigned __int8)byte_9C688D[v121]; 
                         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_surroundings/src/engine/surround.c:1219:26: error: use of undeclared identifier 'byte_9C688D'
v133 = ( unsigned __int8)byte_9C688D[v121]; 
                         ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_surroundings/src/engine/surround.c:1228:7: error: use of undeclared identifier 'byte_9C689F'
if ( !byte_9C689F[v121] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_surroundings/src/engine/surround.c:1230:8: error: use of undeclared identifier 'byte_9C689E'
v123 = byte_9C689E[v121]; 
       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_surroundings/src/engine/surround.c:1326:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[k] != 3 && mx[k - 1] == 1 ) 
     ^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_surroundings/src/obj/1/surround.o] Error 1
